--------------------------------------------------------------------------------
Fusion 1.209 - January ??, 2004
--------------------------------------------------------------------------------
- 01-28-04: Undid Mitch's change b/c it prevented any attacks from happening [Colus]
- 01-28-04: Just fixed some grammatical errors in some hardcoded text. [Mitch]
- 01-28-04: Removed some useless code loops that just affect server performance. [Mitch]
- 01-28-04: Fixed attacking monsters on same square as players [Mitch]
- 01-27-04: Fixed Sanctuary healing dead players (yes, this includes Play Dead!) [Colus]
- 01-27-04: Updated item reqs for Graffiti, Talkie Box, Warp Portal, Venom Dust [Colus]
- 01-27-04: Added effects for Armor cards, Garment cards coming soon. [Colus]
- 01-27-04: Updated Lex Aeterna calculations, probably will again. [Colus]
- 01-27-04: Fixed improper calculation of shield card dmg reductions by race. [Colus]
- 01-27-04: Corrected Deviace Card effect. [Colus]
- 01-27-04: Some comment cleanups. [Colus]
- 01-27-04: Updated damage process for stone/freeze conditions. [Colus]
- 01-26-04: Base & Job Exp capped at 999x to stop MVP Fatal Crashes. [AlexKreuz]
- 01-26-04: Fixed Characters disappear after double-login Bug. [AlexKreuz]
- 01-26-04: Fixed Rogue's Discount Skill No Effect Bug. [AlexKreuz]
- 01-26-04: Fixed Lex Aeterna cast delay/freezing monsters. [Colus]
- 01-26-04: Updated Endure under Lucky Flee conditions. [Colus]
- 01-25-04: Updated Pushcart speed mod for Alchemist (needs another tweak later). [Colus]
- 01-25-04: Corrected Cart Revolution damage/usability. [Colus]
- 01-25-04: Area Effects no longer attack caster in PvP. [Darkhelmet]
- 01-24-04: Fixed Ruwatch / Sight unhide Hidden Enemies. [AlexKreuz]
- 01-24-04: Fixed Pneuma stops Shield Boomerang. [AlexKreuz]
- 01-24-04: Fixed Pneuma stops Spear Boomerang. [AlexKreuz]
- 01-24-04: Fixed Pneuma stops Players' Arrows. [AlexKreuz]
- 01-24-04: Updated Resurrection. [Colus]